--- a/package.json
+++ b/package.json
@@ -7,22 +7,22 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "dev": "run-p dev:parcel cp",
+    "dev": "run-s clean cp dev:parcel",
     "ngrok": "ngrok http 1234",
-    "dev:parcel": "parcel src/index.pug",
-    "cp": "cp -r src/assets dist",
-    "clean": "rimraf dist/*",
     "build": "run-s clean cp build:parcel",
+    "clean": "rimraf dist/*",
+    "cp": "cp -r src/assets dist",
+    "dev:parcel": "parcel src/index.pug",
     "build:parcel": "parcel build src/index.pug",
     "fmt": "prettier --write . -u"
   },
   "devDependencies": {
-    "@prettier/plugin-pug": "^1.13.2",
+    "@parcel/transformer-pug": "2.0.0-nightly.621",
+    "@prettier/plugin-pug": "^1.13.5",
     "ngrok": "^3.4.0",
     "npm-run-all": "^4.1.5",
-    "parcel-bundler": "^1.12.4",
+    "parcel": "^2.0.0-beta.1",
     "prettier": "^2.2.1",
-    "pug": "^3.0.1",
     "rimraf": "^3.0.2"
   }
 }
