--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "npm-run-all": "^4.1.5",
     "parcel": "^2.0.0-beta.1",
     "prettier": "^2.2.1",
+    "pug": "^3.0.2",
     "rimraf": "^3.0.2"
   }
 }
